# VideoScreenshot

./: .gitignore  .pdm-python  README.md  hello.py  pyproject.toml  vshot.py
pkg/: comp_ski.py  multi_level_processing.py
