[project]
name = "videoscreenshot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.1",
    "opencv-python>=4.11.0.86",
    "pillow>=11.1.0",
    "requests>=2.32.3",
    "scikit-image>=0.25.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
# 启用自动修复
fix = true
# 行长度限制
line-length = 100
# 目标Python版本
target-version = "py313"
# 选择规则
select = ["E", "F", "B", "I", "N", "UP", "ANN", "C4", "SIM", "ARG"]
# 忽略某些规则
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.ruff.format]
# 格式化选项
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.black]
line-length = 100
target-version = ["py313"]
include = '\.pyi?$'

[tool.pyright]
reportArgumentType = "none"
reportCallIssue = "none"